clusters/prod/Apps/Media/libreddit/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: libreddit.${SECRET_INT_DOMAIN}
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "600"
    hajimari.io/appName: libreddit
    hajimari.io/icon: simple-icons:reddit
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - libreddit.${SECRET_INT_DOMAIN}
     secretName: prod-libreddit-${SECRET_INT_CERT_DOMAIN}
  rules:
    - host: "libreddit.${SECRET_INT_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: libreddit
                port:
                  number: 8080
---
    apiVersion: cert-manager.io/v1
    kind: Certificate
    metadata:
      name: libreddit.${SECRET_INT_DOMAIN}
      namespace: media
    spec:
      secretName: prod-libreddit-${SECRET_INT_CERT_DOMAIN}
      issuerRef:
        name: letsencrypt-production
        kind: ClusterIssuer
      commonName: "libreddit.${SECRET_INT_DOMAIN}"
      dnsNames:
      - "libreddit.${SECRET_INT_DOMAIN}"
